--- a/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
+++ b/Timer-Weather/Timer-Weather/Base.lproj/Main.storyboard
@@ -107,6 +107,7 @@
                                             <constraint firstAttribute="bottom" secondItem="uDz-E3-v1L" secondAttribute="bottom" id="rXx-zf-k8z"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="backgroundImageView" destination="850-MX-Srq" id="y4Y-iA-9aU"/>
                                             <outlet property="hourHand" destination="7vr-2n-ZKx" id="dRW-hT-vgU"/>
                                             <outlet property="minuteHand" destination="SIp-fh-urC" id="vxT-0P-0c7"/>
                                             <outlet property="secondHand" destination="uDz-E3-v1L" id="hNe-Ld-Tly"/>
@@ -902,27 +903,57 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SelectionTableViewCell" id="GGZ-0F-Lhe" customClass="SelectionTableViewCell" customModule="Timer_Weather" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SelectionTableViewCell" rowHeight="75" id="GGZ-0F-Lhe" customClass="SelectionTableViewCell" customModule="Timer_Weather" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GGZ-0F-Lhe" id="o50-aI-DXQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EvC-Hb-4P4">
-                                                    <rect key="frame" x="25" y="12" width="42" height="21"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lhr-dg-mLJ" customClass="AnalogClockView" customModule="Timer_Weather" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="10" width="50" height="50"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chronography-black" translatesAutoresizingMaskIntoConstraints="NO" id="l2p-C2-izO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="l2p-C2-izO" secondAttribute="height" multiplier="1:1" id="41W-3f-A9x"/>
+                                                                <constraint firstAttribute="width" constant="50" id="hd0-VN-L7R"/>
+                                                                <constraint firstAttribute="height" constant="50" id="wTR-Mr-4bu"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hour" translatesAutoresizingMaskIntoConstraints="NO" id="t6c-0F-czr">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="l2p-C2-izO" firstAttribute="leading" secondItem="lhr-dg-mLJ" secondAttribute="leading" id="IHN-Qr-9RL"/>
+                                                        <constraint firstAttribute="trailing" secondItem="l2p-C2-izO" secondAttribute="trailing" id="LM3-Rw-rDH"/>
+                                                        <constraint firstAttribute="bottom" secondItem="l2p-C2-izO" secondAttribute="bottom" id="P6M-Gh-cbz"/>
+                                                        <constraint firstItem="t6c-0F-czr" firstAttribute="top" secondItem="lhr-dg-mLJ" secondAttribute="top" id="Q2p-Rl-0wn"/>
+                                                        <constraint firstItem="l2p-C2-izO" firstAttribute="top" secondItem="lhr-dg-mLJ" secondAttribute="top" id="QMl-m2-k45"/>
+                                                        <constraint firstAttribute="trailing" secondItem="t6c-0F-czr" secondAttribute="trailing" id="pQv-Zh-GW7"/>
+                                                        <constraint firstItem="t6c-0F-czr" firstAttribute="leading" secondItem="lhr-dg-mLJ" secondAttribute="leading" id="r5g-Yy-6MM"/>
+                                                        <constraint firstAttribute="bottom" secondItem="t6c-0F-czr" secondAttribute="bottom" id="sD7-IR-JNg"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <outlet property="backgroundImageView" destination="l2p-C2-izO" id="X5Q-hb-GR2"/>
+                                                    </connections>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EvC-Hb-4P4">
+                                                    <rect key="frame" x="10" y="20.666666666666671" width="317" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="fol-Z8-nuX"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="Ssy-UQ-cFF">
-                                                    <rect key="frame" x="337" y="17" width="13" height="10"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upper-dial" translatesAutoresizingMaskIntoConstraints="NO" id="WwY-sM-xDf">
-                                                    <rect key="frame" x="10" y="10" width="76" height="24"/>
+                                                    <rect key="frame" x="337" y="30.666666666666664" width="13" height="10"/>
                                                 </imageView>
                                                 <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KRH-KF-qTZ">
-                                                    <rect key="frame" x="0.0" y="43" width="375" height="1"/>
+                                                    <rect key="frame" x="0.0" y="70" width="375" height="1"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="mT9-29-7FQ"/>
@@ -931,22 +962,22 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="WwY-sM-xDf" secondAttribute="bottom" constant="10" id="Dmw-P8-Xn6"/>
-                                                <constraint firstItem="EvC-Hb-4P4" firstAttribute="centerY" secondItem="o50-aI-DXQ" secondAttribute="centerY" id="IVS-cl-lqu"/>
+                                                <constraint firstItem="EvC-Hb-4P4" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leading" constant="10" id="7GG-wV-X1B"/>
+                                                <constraint firstItem="lhr-dg-mLJ" firstAttribute="top" secondItem="o50-aI-DXQ" secondAttribute="top" constant="10" id="Jj4-QU-25O"/>
                                                 <constraint firstAttribute="trailing" secondItem="KRH-KF-qTZ" secondAttribute="trailing" id="OMq-Xg-9aJ"/>
-                                                <constraint firstItem="WwY-sM-xDf" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leading" constant="10" id="Xts-NO-DXs"/>
+                                                <constraint firstItem="lhr-dg-mLJ" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leading" constant="10" id="SEG-Gt-t4o"/>
+                                                <constraint firstItem="EvC-Hb-4P4" firstAttribute="centerY" secondItem="o50-aI-DXQ" secondAttribute="centerY" id="VUv-gU-ANS"/>
                                                 <constraint firstAttribute="bottom" secondItem="KRH-KF-qTZ" secondAttribute="bottom" id="aat-Tt-PI3"/>
-                                                <constraint firstItem="WwY-sM-xDf" firstAttribute="top" secondItem="o50-aI-DXQ" secondAttribute="top" constant="10" id="akg-3e-B5g"/>
-                                                <constraint firstItem="EvC-Hb-4P4" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leadingMargin" constant="10" id="eUV-Za-Pgl"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EvC-Hb-4P4" secondAttribute="trailingMargin" id="grE-dc-XPg"/>
                                                 <constraint firstItem="Ssy-UQ-cFF" firstAttribute="centerY" secondItem="o50-aI-DXQ" secondAttribute="centerY" id="lxY-SI-o0c"/>
+                                                <constraint firstItem="Ssy-UQ-cFF" firstAttribute="leading" secondItem="EvC-Hb-4P4" secondAttribute="trailing" constant="10" id="mDQ-tp-5Ox"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Ssy-UQ-cFF" secondAttribute="trailing" constant="10" id="pWH-HJ-cIx"/>
                                                 <constraint firstItem="KRH-KF-qTZ" firstAttribute="leading" secondItem="o50-aI-DXQ" secondAttribute="leading" id="qJM-Ic-SvR"/>
+                                                <constraint firstItem="KRH-KF-qTZ" firstAttribute="top" secondItem="lhr-dg-mLJ" secondAttribute="bottom" constant="10" id="wz3-DH-zp5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="checkImageView" destination="Ssy-UQ-cFF" id="gR8-J4-jvz"/>
-                                            <outlet property="colockImageView" destination="WwY-sM-xDf" id="xT7-H4-Ygw"/>
+                                            <outlet property="clockView" destination="lhr-dg-mLJ" id="qJm-dj-R7p"/>
                                             <outlet property="contentLabel" destination="EvC-Hb-4P4" id="adV-BL-KqZ"/>
                                         </connections>
                                     </tableViewCell>
@@ -972,7 +1003,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KTg-Us-kTz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1329" y="125"/>
+            <point key="canvasLocation" x="1328.8" y="124.8768472906404"/>
         </scene>
     </scenes>
     <resources>
